file-operations: ignore extensions when duplicating folders

If a file named "foo.bar" is duplicated, the copy is named "foo (copy).bar",
keeping the extension at the end.

However, this is applying to folders too, where we don't need to worry about
keeping extesions at the end. The result is unexpected.

Therefore, ignore extension if the duplicating item is a folder, except if the
folder already has a copy tag before a dot, such as "dir (copy).dir".

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=696451